--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
             <img class="header__logo" src="./images/header-logo.svg" alt="Логотип Россия">
             <div class="header__lang">
                 <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
-                <a href="#" class="header__lang-link">Eng</a>
+                <a href="#" class="header__lang-link">En</a>
             </div>
         </header>
     <main class="content">
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <img class="lead__image" src="./images/lead-polka.jpg" alt="Девушка в поезде">
-        <p class="lead__caption">ваша полка — верхняя</p>
+        <figure class="lead__container">
+          <img class="lead__image" src="./images/lead-polka.jpg" alt="Девушка в поезде">
+          <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+        </figure>
       </section>
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
@@ -59,9 +61,9 @@
           <h3 class="place__title">Куршская коса</h3>
           <div class="place__website">
               <p class="place__url-heading">url</p>
-              <a class="place__url" href="http://park-kosa.ru/">park-kosa.ru</a>
+              <a class="place__url" href="http://park-kosa.ru/"  target="_blank">park-kosa.ru</a>
           </div>
-          <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
+          <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса" >
           <div class="place_paragraphs">
               <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
               <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
@@ -72,7 +74,7 @@
           <h3 class="place__title">Кольский</h3>
           <div class="place__website">
               <p class="place__url-heading">url</p>
-              <a class="place__url" href="https://www.nationalgeographic.com/">National Geographic</a>
+              <a class="place__url" href="https://www.nationalgeographic.com/"  target="_blank">National Geographic</a>
           </div>
           <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский полуостров">
           <div class="place_paragraphs">
@@ -85,7 +87,7 @@
           <h3 class="place__title">Алтай</h3>
           <div class="place__website">
               <p class="place__url-heading">url</p>
-              <a class="place__url" href="https://facebook.com/">Facebook</a>
+              <a class="place__url" href="https://facebook.com/"  target="_blank">Facebook</a>
           </div>
           <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
           <div class="place_paragraphs">
@@ -97,7 +99,7 @@
           <h3 class="place__title">Зимний Байкал</h3>
           <div class="place__website">
               <p class="place__url-heading">url</p>
-              <a class="place__url" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+              <a class="place__url" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
           </div>
           <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Лед на озере Байкал">
           <div class="place__paragraphs">
@@ -109,7 +111,7 @@
           <h3 class="place__title">Карелия</h3>
           <div class="place__website">
               <p class="place__url-heading">url</p>
-              <a class="place__url" href="http://vodlozero.ru/">http://vodlozero.ru/</a>
+              <a class="place__url" href="http://vodlozero.ru/" target="_blank">http://vodlozero.ru/</a>
           </div>
           <img class="place__image" src="./images/place-karelia.jpg" alt="Река в Карелии">
           <div class="place__paragraphs">
@@ -118,7 +120,7 @@
       </div>
       </section>
       <section class="cover">
-        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala"  target="_blank">
           <h3 class="cover__title">До Байкала «на собаках»</h3>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
         </a>
@@ -127,11 +129,11 @@
     <footer class="footer">
       <nav class="footer__nav">
           <ul class="footer__nav-links">
-              <li><a class="footer__nav-link" href="https://yandex.ru/maps/">Карты</a></li>
-              <li><a class="footer__nav-link" href="https://yandex.ru/pogoda/">Погода</a></li>
-              <li><a class="footer__nav-link" href="https://rasp.yandex.ru/">Расписание</a></li>
-              <li><a class="footer__nav-link" href="https://calendar.yandex.ru/">Календарь</a></li>
-              <li><a class="footer__nav-link" href="https://travel.yandex.ru/">Путешествия</a></li>
+              <li><a class="footer__nav-link" href="https://yandex.ru/maps/" target="_blank">Карты</a></li>
+              <li><a class="footer__nav-link" href="https://yandex.ru/pogoda/" target="_blank">Погода</a></li>
+              <li><a class="footer__nav-link" href="https://rasp.yandex.ru/" target="_blank">Расписание</a></li>
+              <li><a class="footer__nav-link" href="https://calendar.yandex.ru/" target="_blank">Календарь</a></li>
+              <li><a class="footer__nav-link" href="https://travel.yandex.ru/" target="_blank">Путешествия</a></li>
           </ul>
       </nav>
       <p class="footer__copyright">&copy; 2020. Алексей Ефимов</p>
